FIX: Checkout toast visible until clicked

--- a/src/styles/CartSidebar.css
+++ b/src/styles/CartSidebar.css
@@ -68,4 +68,5 @@
   background-color: #484343;
   position: absolute;
   top: 25rem;
+  z-index: 99;
 }
